Cannot jump between GP keyframes in dopesheet #43552

Closed
opened 2015-02-03 20:55:23 +01:00 by Jeffrey · 5 comments

System Information
Fedora 20 x64 KDE
Nvidia GTX 560 Ti 2GB w/proprietary drivers

Blender Version
Daily git builds (75249259f4). Also affects official 2.73a release.

Short description of error
Jumping between keyframes does not function in the grease pencil dopesheet editor. If you have an object in the scene with keys, it will flip between keys on the active object or last active object. This breaks consistency with other editors, such as timeline or 3d viewport. If I have only a grease pencil animation, using the up and down arrow keys to jump between keys will jump between GP keys of the visible GP layers. Having only a grease pencil animation in the dope sheet will give the error "No more keyframes to jump in this direction" while moving to another editor will allow such a jump. This behavior manifests in the graph editor, too, although this is slightly more acceptable because GP is not present in the graph editor.

Exact steps for others to reproduce the error
See attached blend - make sure you load UI with the blend. Ensure dopesheet is in grease pencil mode. Jump keyframes with default keys of up arrow and down arrow. Grease pencil will be ignored and it will jump between keys on the cube, which has keys on f123 and f152.

Now delete the cube. Jump between keyframes in the viewport and timeline. It will jump between GP frames now. Move over to dopesheet and jump. It will throw the error mentioned above. animatics.blend

**System Information** Fedora 20 x64 KDE Nvidia GTX 560 Ti 2GB w/proprietary drivers **Blender Version** Daily git builds (75249259f4f6ec9c514d355f00899d7bf427ebf7). Also affects official 2.73a release. **Short description of error** Jumping between keyframes does not function in the grease pencil dopesheet editor. If you have an object in the scene with keys, it will flip between keys on the active object or last active object. This breaks consistency with other editors, such as timeline or 3d viewport. If I have only a grease pencil animation, using the up and down arrow keys to jump between keys will jump between GP keys of the visible GP layers. Having only a grease pencil animation in the dope sheet will give the error "No more keyframes to jump in this direction" while moving to another editor will allow such a jump. This behavior manifests in the graph editor, too, although this is slightly more acceptable because GP is not present in the graph editor. **Exact steps for others to reproduce the error** See attached blend - make sure you load UI with the blend. Ensure dopesheet is in grease pencil mode. Jump keyframes with default keys of up arrow and down arrow. Grease pencil will be ignored and it will jump between keys on the cube, which has keys on f123 and f152. Now delete the cube. Jump between keyframes in the viewport and timeline. It will jump between GP frames now. Move over to dopesheet and jump. It will throw the error mentioned above. [animatics.blend](https://archive.blender.org/developer/F140739/animatics.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @italic

Added subscriber: @italic

This issue was referenced by 810c7ee825

This issue was referenced by 810c7ee825133b78c6759e2607bf1b888a8f3dbc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 810c7ee825.

Closed by commit 810c7ee825.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43552
No description provided.