Fix T43552: Cannot jump between GP keyframes in dopesheet